# jsbsim-gui

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: pythonpackage.yml
UI/: __main__.py  app.py  code_editor.py  controller.py  hierarchical_tree.py  source_editor.py
jsbsim_gui/: __main__.py  app.py  consoles_panel.py  controller.py  edit_actions.py  find.py  hierarchical_tree.py  menu_bar.py  plotinfo_list.py  plots_view.py  run.py  source_editor.py  textview.py  widget.py
python/UI/: CMakeLists.txt  __main__.py  app.py  controller.py  hierarchical_tree.py  plots_view.py  run.py  source_editor.py  textview.py
src/: __main__.py  app.py  controller.py  file_state.py  hierarchical_tree.py  plotinfo_list.py  plots_view.py  property_history.py  property_list.py  run.py  source_editor.py  textview.py
tests/: test_consoles_panel.py  test_controller_logger.py  test_plotinfo_list.py  test_property_history.py  test_property_list.py  test_textview_menu_bar.py  test_xml_node.py
