[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsbsim-gui"
version = "0.1.0"
description = "A Graphical User Interface for JSBSim"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "Bertrand Coconnier" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["jsbsim>=1.3.0", "matplotlib", "numpy", "Pillow"]

[project.urls]
Homepage = "https://github.com/JSBSim-Team/jsbsim-gui"

[project.scripts]
jsbsim-gui = "jsbsim_gui.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["jsbsim_gui"]
